tests/spectest/ref.bin.wast
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\9b\80\80\80\00\02\60"
  "\00\00\60\0c\70\6f\64\70\64\6f\64\00\64\00\64\00"
  "\64\00\70\6f\63\00\63\00\00\03\82\80\80\80\00\01"
  "\01\0a\88\80\80\80\00\01\82\80\80\80\00\00\0b"
)
(module instance)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
    "\01\64\01\00"
  )
  "unknown type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
    "\00\01\64\01"
  )
  "unknown type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\06\87\80\80\80\00\01\63"
    "\01\00\d0\01\0b"
  )
  "unknown type"
)
(assert_invalid
  (module binary "\00\61\73\6d\01\00\00\00\04\85\80\80\80\00\01\63" "\01\00\0a")
  "unknown type"
)
(assert_invalid
  (module binary "\00\61\73\6d\01\00\00\00\09\85\80\80\80\00\01\05" "\64\01\00")
  "unknown type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
    "\01\64\01\00\03\82\80\80\80\00\01\00\0a\88\80\80"
    "\80\00\01\82\80\80\80\00\00\0b"
  )
  "unknown type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
    "\00\01\64\01\03\82\80\80\80\00\01\00\0a\88\80\80"
    "\80\00\01\82\80\80\80\00\00\0b"
  )
  "unknown type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\0a\8b\80\80\80\00"
    "\01\85\80\80\80\00\01\01\63\01\0b"
  )
  "unknown type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\0a\8e\80\80\80\00"
    "\01\88\80\80\80\00\00\02\64\01\00\0b\1a\0b"
  )
  "unknown type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\0a\8e\80\80\80\00"
    "\01\88\80\80\80\00\00\03\64\01\00\0b\1a\0b"
  )
  "unknown type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\0a\8d\80\80\80\00"
    "\01\87\80\80\80\00\00\04\64\01\0b\1a\0b"
  )
  "unknown type"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\0a\8e\80\80\80\00"
    "\01\88\80\80\80\00\00\00\1c\01\64\01\1a\0b"
  )
  "unknown type"
)
